--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "spatie/laravel-medialibrary": "^9.7",
         "spatie/laravel-permission": "^4.2"
     },
     "require-dev": {
